Fixed the nav images not showing up on github pages for the docs page as well, and attempted to fix the image scaling on github pages

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -74,16 +74,17 @@ nav {
         /* align-self: center; */
         border-radius: 5%;
     }
-    img {
-        object-fit: contain;
-        height: auto;
-        width: 100px;
-        height: 100px;
-        border-radius: 5%;
-    }
     .selected {
         background-color: red;
     }
+}
+
+nav img {
+    object-fit: contain;
+    height: auto;
+    width: 100px;
+    height: 100px;
+    border-radius: 5%;
 }
 
 header hr {
